Fix overflow on chrome

--- a/src/App.css
+++ b/src/App.css
@@ -29,7 +29,7 @@ body {
 }
 
 .intro-name {
-  width: calc(100vw - 12px);
+  width: calc(100vw - 15px);
 }
 
 .intro-name-bg {
